--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
   "dependencies": {
     "apollo-server": "^2.13.1",
     "apollo-server-express": "^2.13.1",
+    "bcrypt": "^4.0.1",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "graphql": "^15.0.0",
+    "graphql-resolvers": "^0.4.2",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.2.1",
     "sequelize": "^5.21.10",
     "uuid": "^8.1.0"
